...
    <string name="land_address">Land Address</string>
    <string name="aims_title">AIMS</string>
    <string name="dataEntry_title">Enter Cultivated Crop Data</string>
    <string name="data_entry_image">data entry image</string>
    <string name="land_extent">Land Extent (ha)</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="hectares">   (ha)</string>
    <string name="next">Next</string>
    <string name="landTitle">Enter Cultivated Land Details</string>
    <string name="landType">Select Land Type</string>
    <string name="Previous">Previous</string>
    <string name="Land_Data">Land Data</string>
...
        <item>Acre</item>
        <item>Rood</item>
        <item>Perch</item>
    </string-array>

    <string name="aims_mobile">Agricultural Information Management System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="farmer">Farmer</string>
    <string name="field">Field Officer</string>
    <string name="NIC">Enter NIC</string>
    <string name="Login">Login with username</string>
    <string name="Enter_nic">Enter NIC no to proceed</string>
    <string name="Approval">Approval</string>
    <string name="Data">Data Entry</string>

    <string name="farmerFirstName">Farmer First Name</string>
    <string name="farmerLastName">Farmer Last Name</string>
...
