...
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="36dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/aims_mobile"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
...
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/field"
            android:textSize="30sp" />

        <Button
            android:id="@+id/login_submit"
            android:layout_width="261dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@drawable/data_entry_button"
            android:onClick="changeOfficer"
            android:text="@string/Login" />
...
