...
            android:background="@drawable/data_entry_button"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="180dp"
            android:layout_height="7dp"
            android:layout_marginTop="70px"
            android:layout_weight="1"
            android:background="@drawable/data_entry_button"
            android:text="@string/submit" />
...
